--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <div id="map3">
         C
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./lib/L.Geoserver.js"></script>
+    <script src="./data/buildup.js"></script>
     <script src="./script.js">  </script>
 
 </body>
